--- a/app/src/main/res/layout/activity_interest.xml
+++ b/app/src/main/res/layout/activity_interest.xml
@@ -7,10 +7,13 @@
 
     <TextView
             android:id="@+id/tvActivityInterestTitle"
-            android:layout_width="match_parent"
-              android:layout_height="50dp"
-              android:text="Choose your Interesting!"
-              android:textSize="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="Choose your Interesting!"
+            android:textSize="24sp"
+            android:textColor="@color/black"
+            android:layout_marginTop="86dp"
+            android:layout_marginLeft="45dp"
     />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -20,15 +23,22 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/tvActivityInterestTitle"
             android:layout_above="@+id/btnActivityInterestOk"
-
+            android:layout_marginTop="22dp"
+            android:layout_marginLeft="45dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="32dp"
     />
 
     <Button
             android:id="@+id/btnActivityInterestOk"
             android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:text="확인"
+            android:layout_width="288dp"
+            android:layout_height="46dp"
+            android:textColor="@color/white"
+            android:background="@color/black"
+            android:text="폴더 생성하기"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="31dp"
     />
 
 
