--- a/app/src/main/res/layout/item_interest.xml
+++ b/app/src/main/res/layout/item_interest.xml
@@ -1,34 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:orientation="vertical"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_margin="10dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20.6dp"
 >
 
     <androidx.cardview.widget.CardView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:cardCornerRadius="6dp">
+            android:id="@+id/cvInterest"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="1dp"
+    >
 
-            <TextView
-                    android:id="@+id/tvItemName"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorAccent"
-                    android:text="뷰티"
-                    android:gravity="center"
-            />
+        <ImageView
+                android:id="@+id/ivInterest"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/img_book"
+        />
 
-            <ImageView
-                    android:id="@+id/ivInterestCheck"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/check"
-                    android:visibility="invisible"
-            />
+        <ImageView
+                android:id="@+id/ivInterestCheck"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/btn_check"
+                android:visibility="invisible"
+                android:background="@android:color/transparent"
+        />
 
     </androidx.cardview.widget.CardView>
-</FrameLayout>
+
+    <TextView
+            android:layout_below="@+id/cvInterest"
+            android:id="@+id/tvItemName"
+            android:layout_width="wrap_content"
+            android:layout_height="12dp"
+            android:text="뷰티"
+            android:textSize="10sp"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/black"
+            android:layout_marginTop="13dp"
+    />
+</RelativeLayout>
