--- a/app/src/main/res/drawable/drawable_folder_head.xml
+++ b/app/src/main/res/drawable/drawable_folder_head.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+       android:shape="rectangle">
 
-</selector>
+    <solid
+            android:color="@color/white"/>
+
+    <corners
+            android:radius="3.1dp"/>
+
+    <size
+            android:width="43.9dp"
+            android:height="13.5dp"/>
+
+</shape>
