--- a/app/src/main/res/drawable/drawable_white_rad_4.xml
+++ b/app/src/main/res/drawable/drawable_white_rad_4.xml
@@ -3,7 +3,11 @@
        android:shape="rectangle">
 
     <solid
-            android:color="@color/black"/>
+            android:color="@color/white"/>
+
+    <stroke
+            android:color="@color/black"
+            android:width="1dp"/>
 
     <corners
             android:radius="4dp"/>
