--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,14 @@
 
     <TextView
             android:id="@+id/tvActivityMainTitle"
-            android:textSize="15sp"
+            android:textSize="24sp"
             android:text="WelCome MoLink!"
             android:gravity="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="86dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -22,16 +25,20 @@
             android:id="@+id/rvActivityMain"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="45dp"
             app:layout_constraintTop_toBottomOf="@+id/tvActivityMainTitle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <ImageView
             android:id="@+id/fabActivityMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:src="@drawable/fab"
+            android:layout_marginEnd="14dp"
+            android:layout_marginBottom="29dp"
+            app:backgroundTint="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
