--- a/app/src/main/res/layout/dialog_modify_folder.xml
+++ b/app/src/main/res/layout/dialog_modify_folder.xml
@@ -1,49 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@android:color/white"
         android:gravity="center"
-        android:orientation="vertical"
-        android:layout_width="300dp"
-        android:layout_height="400dp">
+        android:paddingBottom="22.9dp"
+        android:layout_width="288.8dp"
+        android:layout_height="379.7dp">
 
     <TextView
             android:id="@+id/tvDialogModifyFolderTitle"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginTop="89dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="제목"/>
 
-    <Button
+    <TextView
             android:id="@+id/btnDialogModifyFolderMake"
-            android:text="생성"
+            android:text="폴더 추가"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:background="@drawable/drawable_black_rad_4"
             android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:visibility="visible"/>
+            android:layout_width="246dp"
+            android:layout_height="40dp"
+            tools:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <Button
+    <TextView
             android:id="@+id/btnDialogModifyFolderDelete"
             android:text="삭제"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:background="@drawable/drawable_white_rad_4"
             android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:visibility="visible"/>
+            android:layout_width="110dp"
+            android:layout_height="40dp"
+            tools:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btnDialogModifyFolderModify"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <Button
+    <TextView
             android:id="@+id/btnDialogModifyFolderModify"
             android:text="수정"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:background="@drawable/drawable_black_rad_4"
             android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:visibility="visible"/>
+            android:layout_width="110dp"
+            android:layout_height="40dp"
+            tools:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnDialogModifyFolderDelete"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <Button
+    <ImageView
             android:id="@+id/btnDialogModifyFolderCancel"
-            android:text="취소"
-            android:visibility="gone"
+            android:src="@drawable/ic_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:visibility="visible"/>
+            android:layout_margin="21dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
