--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -1,30 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".share.ShareActivity">
+        android:orientation="vertical">
+
     <TextView
-            android:text="shared_url"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/tvLinkSaveTitle"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textSize="30sp"
+            android:textColor="@color/black"
+            android:lineSpacingExtra="4sp"
+            android:gravity="center"
+            android:text="Link Save"
+    />
+
+    <TextView
             android:id="@+id/tvSharedUrl"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/etSharedTitle" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"
-            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="10dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
+            android:textSize="20sp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:textColor="@color/black"
+            android:lineSpacingExtra="18sp"
+            android:layout_below="@+id/tvLinkSaveTitle"/>
+
     <EditText
             android:id="@+id/etSharedTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="Name"
-            android:ems="10"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvSharedUrl"
-            app:layout_constraintHorizontal_bias="0.5"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:lineSpacingExtra="18sp"
+            android:layout_alignStart="@+id/tvSharedUrl"
+            android:layout_alignEnd="@+id/tvSharedUrl"
+            android:layout_marginTop="30dp"
+            android:layout_below="@+id/tvSharedUrl"
+            android:inputType=""/>
+    <Button
+            android:id="@+id/btnLinkSave"
+            android:text="링크 저장"
+            android:background="#060505"
+            android:layout_alignParentBottom="true"
+            android:textColor="@color/white"
+            android:layout_height="46dp"
+            android:gravity="center"
+            android:layout_marginBottom="31dp"
+            android:layout_alignStart="@+id/etSharedTitle"
+            android:layout_alignEnd="@+id/etSharedTitle"
+            android:layout_width="match_parent"/>
+
+</RelativeLayout>
