--- a/app/src/main/res/layout/item_detail_folder.xml
+++ b/app/src/main/res/layout/item_detail_folder.xml
@@ -3,9 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_marginBottom="17.8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_centerInParent="true"
@@ -13,7 +12,7 @@
             android:layout_height="wrap_content">
 
         <ImageView
-                android:id="@+id/ivItemFolderHead"
+                android:id="@+id/ivItemDetailFolderHead"
                 android:src="@drawable/drawable_folder_head"
                 android:layout_marginStart="16.6dp"
                 android:layout_marginTop="3.6dp"
@@ -32,7 +31,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
 
         <ImageView
-                android:id="@+id/ivItemFolder"
+                android:id="@+id/ivItemDetailFolder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/img_folder"
@@ -40,32 +39,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-        <LinearLayout
-                android:id="@+id/llItemFolderModify"
-                android:orientation="vertical"
-                android:layout_width="0dp"
+        <TextView
+                android:id="@+id/tvItemDetailFolderTitle"
+                android:textSize="11dp"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="end"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="9.7dp"
+                app:layout_constraintTop_toBottomOf="@+id/ivItemDetailFolder"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivItemFolder">
-
-            <TextView
-                    android:id="@+id/tvItemFolderTitle"
-                    android:textColor="@color/black"
-                    android:textSize="11dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    tools:text="제목"/>
-
-            <ImageView
-                    android:src="@drawable/ic_dot"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"/>
-
-        </LinearLayout>
+                tools:text="title"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
