--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="purpleish_blue">#5656f4</color>
     <color name="lighter_purple">#956bf2</color>
     <color name="white">#ffffff</color>
+    <color name="brown_grey">#1A999999</color>
 
 </resources>
