--- a/app/src/main/res/layout/activity_interest.xml
+++ b/app/src/main/res/layout/activity_interest.xml
@@ -35,10 +35,11 @@
             android:layout_width="288dp"
             android:layout_height="46dp"
             android:textColor="@color/white"
-            android:background="@color/black"
+            android:background="@color/cardview_shadow_start_color"
             android:text="폴더 생성하기"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="31dp"
+            android:enabled="false"
     />
 
 
