--- a/app/src/main/res/layout/item_main_folder.xml
+++ b/app/src/main/res/layout/item_main_folder.xml
@@ -54,6 +54,7 @@
                     android:id="@+id/tvItemMainFolderTitle"
                     android:textColor="@color/black"
                     android:textSize="11dp"
+                    android:singleLine="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
