--- a/app/src/main/res/layout/item_nav_folder.xml
+++ b/app/src/main/res/layout/item_nav_folder.xml
@@ -23,11 +23,13 @@
                 android:layout_height="wrap_content"
                 tools:text="title"/>
 
-        <ImageView
+        <TextView
+                android:text=">"
                 android:layout_marginStart="10dp"
-                android:background="@color/black"
-                android:layout_width="4dp"
-                android:layout_height="8dp"/>
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
