--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -57,6 +57,8 @@
 
             <EditText
                     android:id="@+id/etSharedTitle"
+                    android:maxLines="1"
+                    android:singleLine="true"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:textSize="20sp"
@@ -68,7 +70,7 @@
                     android:layout_below="@+id/tvSharedUrl"
                     android:inputType=""
                     android:drawableRight="@drawable/compose"/>
-
+<!-- 해쉬태그 기능 제외
             <TextView
                     android:id="@+id/tvHashTagTitle"
                     android:layout_width="68sp"
@@ -93,24 +95,24 @@
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerviewHashTags"
                     android:layout_width="match_parent"
-                    android:layout_height="73dp" android:layout_marginTop="15dp"
+                    android:layout_height="wrap_content" android:layout_marginTop="15dp"
                     android:layout_below="@+id/edAddHashTag"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"/>
-
+-->
             <TextView
                     android:id="@+id/tvStoreRouteTitle"
                     android:layout_width="70sp"
-                    android:layout_height="25sp"
+                    android:layout_height="23sp"
                     android:background="@drawable/stored_root"
                     android:layout_marginTop="26dp"
                     android:layout_marginStart="0dp"
-                    android:layout_alignStart="@+id/etSharedTitle" android:layout_below="@+id/recyclerviewHashTags"/>
+                    android:layout_alignStart="@+id/etSharedTitle" android:layout_below="@+id/etSharedTitle"/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerviewStoreRoute"
                     android:layout_width="match_parent"
-                    android:layout_height="67dp" android:layout_marginTop="15dp"
+                    android:layout_height="wrap_content" android:layout_marginTop="15dp"
                     android:layout_below="@+id/tvStoreRouteTitle"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"/>
@@ -122,14 +124,12 @@
                     android:layout_alignStart="@+id/etSharedTitle"
                     android:layout_alignEnd="@+id/etSharedTitle"
                     android:layout_width="0dp"
-                    android:layout_marginTop="60dp"
+                    android:layout_marginTop="150dp"
                     android:layout_marginStart="0dp" android:layout_marginEnd="0dp"
                     android:layout_marginBottom="20dp" android:layout_below="@+id/recyclerviewStoreRoute"/>
 
-
         </RelativeLayout>
-
-
     </ScrollView>
+
 
 </RelativeLayout>
