--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -2,7 +2,6 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -40,7 +39,7 @@
             android:fillViewport="true">
 
         <RelativeLayout android:layout_width="match_parent"
-                      android:layout_height="match_parent">
+                      android:layout_height="wrap_content">
 
             <TextView
                     android:id="@+id/tvSharedUrl"
@@ -57,19 +56,17 @@
 
             <EditText
                     android:id="@+id/etSharedTitle"
-                    android:maxLines="1"
                     android:singleLine="true"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:textSize="20sp"
                     android:textColor="@color/black"
-                    android:lineSpacingExtra="18sp"
                     android:layout_alignStart="@+id/tvSharedUrl"
                     android:layout_alignEnd="@+id/tvSharedUrl"
                     android:layout_marginTop="30dp"
                     android:layout_below="@+id/tvSharedUrl"
-                    android:inputType=""
-                    android:drawableRight="@drawable/compose"/>
+                    android:inputType="text"/>
+
 <!-- 해쉬태그 기능 제외
             <TextView
                     android:id="@+id/tvHashTagTitle"
@@ -102,12 +99,27 @@
 -->
             <TextView
                     android:id="@+id/tvStoreRouteTitle"
-                    android:layout_width="70sp"
-                    android:layout_height="23sp"
-                    android:background="@drawable/stored_root"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="저장 위치 : "
+                    android:textSize="20dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:layout_marginTop="26dp"
                     android:layout_marginStart="0dp"
                     android:layout_alignStart="@+id/etSharedTitle" android:layout_below="@+id/etSharedTitle"/>
+
+            <TextView
+                    android:id="@+id/tvStoreRouteFolder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:layout_marginTop="26dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_toRightOf="@+id/tvStoreRouteTitle" android:layout_below="@+id/etSharedTitle"
+                    tools:text="folder"/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerviewStoreRoute"
