--- a/app/src/main/res/layout/item_link.xml
+++ b/app/src/main/res/layout/item_link.xml
@@ -58,6 +58,7 @@
 
         <ImageView
                 android:id="@+id/ivItemLinkModify"
+                android:visibility="gone"
                 android:src="@drawable/ic_dot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
