1 . 모링 앱 아이콘 변경 2. 링크 저장 시 헤더 정보 가져올 때 생기는 버그 수정 3. 메인 폴더의 수정버튼 사이즈 늘림

--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -61,6 +61,7 @@
                     android:layout_height="50dp"
                     android:textSize="20sp"
                     android:textColor="@color/black"
+                    android:hint="링크 제목을 입력해 주세요"
                     android:layout_alignStart="@+id/tvSharedUrl"
                     android:layout_alignEnd="@+id/tvSharedUrl"
                     android:layout_marginTop="30dp"
