--- a/app/src/main/res/layout/item_main_folder.xml
+++ b/app/src/main/res/layout/item_main_folder.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_marginBottom="17.8dp"
+        android:layout_marginBottom="7.8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -46,6 +46,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="end"
+                android:paddingBottom="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ivItemMainFolder">
