1. 폴더의 추가, 수정, 삭제 코드 정리 2. 링크 CRUD 코드 추가

--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -141,6 +141,27 @@
                     android:layout_marginStart="0dp" android:layout_marginEnd="0dp"
                     android:layout_marginBottom="20dp" android:layout_below="@+id/recyclerviewStoreRoute"/>
 
+            <Button
+                    android:id="@+id/btnLinkModify"
+                    android:text="수정"
+                    android:visibility="gone"
+                    android:layout_below="@+id/recyclerviewStoreRoute"
+                    android:layout_marginBottom="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:visibility="visible"/>
+
+            <Button
+                    android:id="@+id/btnLinkDelete"
+                    android:text="삭제"
+                    android:visibility="gone"
+                    android:layout_below="@+id/recyclerviewStoreRoute"
+                    android:layout_marginBottom="20dp"
+                    android:layout_toRightOf="@+id/btnLinkModify"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:visibility="visible"/>
+
         </RelativeLayout>
     </ScrollView>
 
