--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="white">#ffffff</color>
     <color name="brown_grey">#1A999999</color>
 
+    <color name="white_gray">#f8f8f8</color>
+
 </resources>
