--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">@color/dark</color>
+    <color name="colorPrimary">@color/dark</color> <!-- bottom nav -->
+    <color name="colorPrimaryDark">@color/dark</color> <!-- status bar -->
     <color name="colorAccent">#D81B60</color>
 
     <color name="black">#000000</color>
