메인 폴더 수정 버튼 롱클릭으로 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="white">#ffffff</color>
     <color name="brown_grey">#1A999999</color>
     <color name="dark">#2e3442</color>
+    <color name="very_light_pink">#c4c4c4</color>
 
     <color name="white_gray">#f8f8f8</color>
 
