--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,33 +6,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.main.fragment.main.MainFragment">
-
-    <TextView
-            android:id="@+id/tvActivityMainTitle"
-            android:textSize="24sp"
-            android:text="WelCome MoLink!"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
+    
+    <ImageView
+            android:id="@+id/ivFragmentMainTitle"
+            android:src="@drawable/main_top"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="86dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:adjustViewBounds="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvActivityMain"
+            android:id="@+id/rvFragmentMain"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvActivityMainTitle"
+            app:layout_constraintTop_toBottomOf="@+id/ivFragmentMainTitle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
     <ImageView
-            android:id="@+id/fabActivityMain"
+            android:id="@+id/fabFragmentMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/fab"
@@ -42,7 +38,7 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ProgressBar
-            android:id="@+id/pbActivityMain"
+            android:id="@+id/pbFragmentMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
