--- a/app/src/main/res/layout/item_main_folder.xml
+++ b/app/src/main/res/layout/item_main_folder.xml
@@ -40,32 +40,59 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
+        <TextView
+                android:id="@+id/tvItemMainFolderTitle"
+                android:textColor="@color/dark"
+                android:textStyle="bold"
+                android:textSize="12dp"
+                android:singleLine="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/ivItemMainFolder"
+                app:layout_constraintBottom_toBottomOf="@+id/ivItemMainFolder"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="제목"/>
+
         <LinearLayout
-                android:id="@+id/llItemMainFolderModify"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="end"
+                android:gravity="center"
+                android:paddingTop="8dp"
                 android:paddingBottom="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ivItemMainFolder">
 
-            <TextView
-                    android:id="@+id/tvItemMainFolderTitle"
-                    android:textColor="@color/black"
-                    android:textSize="11dp"
-                    android:singleLine="true"
+            <ImageView
+                    android:layout_marginEnd="7dp"
+                    android:src="@drawable/icon_attached"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    tools:text="제목"/>
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:text="4"
+                    android:textStyle="bold"
+                    android:textSize="11dp"
+                    android:layout_marginEnd="7dp"
+                    android:textColor="@color/very_light_pink"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
             <ImageView
-                    android:src="@drawable/ic_dot"
+                    android:layout_marginEnd="7dp"
+                    android:src="@drawable/icon_heart"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"/>
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:text="8"
+                    android:textStyle="bold"
+                    android:textSize="11dp"
+                    android:textColor="@color/very_light_pink"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
